log
Fri 24 Mar 2023 12:47:52 AM UTC: 
 tests:  0|6
total_score: 0/70
bd6f410
Fri 24 Mar 2023 12:51:38 AM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:32:9: error: unused variable ‘lista’ [-Werror=unused-variable]
   32 |   List *lista = (List*) malloc (sizeof(List));
      |         ^~~~~
cc1: all warnings being treated as errors
Compilation failed
0e93f03
Fri 24 Mar 2023 12:57:34 AM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
4235588
Fri 24 Mar 2023 01:05:42 AM UTC: 
 list.c | 12 +++++++-----
 1 file changed, 7 insertions(+), 5 deletions(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:40:20: error: incompatible types when assigning to type ‘Node’ from type ‘Node *’
   40 |   *list->current = list->head;
      |                    ^~~~
list.c:39:9: error: unused variable ‘data’ [-Werror=unused-variable]
   39 |   void *data = list->head->data;
      |         ^~~~
cc1: all warnings being treated as errors
Compilation failed
1206505
Fri 24 Mar 2023 01:11:58 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:39:9: error: unused variable ‘data’ [-Werror=unused-variable]
   39 |   void *data = list->head->data;
      |         ^~~~
cc1: all warnings being treated as errors
Compilation failed
640ed6e
